# mkdocs-extrafiles

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
mkdocs/: gen_ref_pages.py  hooks.py  mkdocs.yaml
mkdocs_extrafiles/: __init__.py  _version.py  plugin.py
tests/unit/: test_plugin.py
